tests/fixtures/invalid/str_pow_str.py
# Cannot power Str and Str
x: str = "hello" ** "hello"
